--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -33,9 +33,20 @@ http {
         index index.php;
 
         # Security headers
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-Content-Type-Options "nosniff";
-        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        # CORS headers for all responses
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With" always;
+        add_header Access-Control-Max-Age 3600 always;
+
+        # Handle CORS preflight at nginx level (fastest, no PHP overhead)
+        if ($request_method = OPTIONS) {
+            return 204;
+        }
 
         # Health-check endpoint (no PHP needed)
         location = /ping {
