fix: add CORS headers inside OPTIONS if block
nginx if blocks don't inherit add_header directives from parent context.
Headers must be declared inside the if block for OPTIONS preflight.
Using wildcard origin (*) for maximum compatibility.

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -38,13 +38,19 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
 
         # CORS headers for all responses
-        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Origin "*" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With" always;
         add_header Access-Control-Max-Age 3600 always;
 
-        # Handle CORS preflight at nginx level (fastest, no PHP overhead)
+        # Handle CORS preflight - headers must be INSIDE the if block
         if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With" always;
+            add_header Access-Control-Max-Age 3600 always;
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
             return 204;
         }
 
