fix: move OPTIONS handling into location blocks (proper nginx way)
Server-level if statements cause nginx to fail. Moved OPTIONS
preflight handling into location / and location ~ \.php$ blocks
where if statements are properly supported.

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -24,6 +24,12 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
 
+    # Map for CORS - cleaner than if statements
+    map $request_method $cors_method {
+        OPTIONS 1;
+        default 0;
+    }
+
     server {
         # Render injects $PORT at runtime; replaced by envsubst in entrypoint.sh
         listen ${PORT};
@@ -40,19 +46,8 @@ http {
         # CORS headers for all responses
         add_header Access-Control-Allow-Origin "*" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With, X-CSRF-Token" always;
         add_header Access-Control-Max-Age 3600 always;
-
-        # Handle CORS preflight - headers must be INSIDE the if block
-        if ($request_method = OPTIONS) {
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With" always;
-            add_header Access-Control-Max-Age 3600 always;
-            add_header Content-Length 0;
-            add_header Content-Type text/plain;
-            return 204;
-        }
 
         # Health-check endpoint (no PHP needed)
         location = /ping {
@@ -62,10 +57,32 @@ http {
         }
 
         location / {
+            # Handle OPTIONS preflight
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin "*" always;
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+                add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With, X-CSRF-Token" always;
+                add_header Access-Control-Max-Age 3600 always;
+                add_header Content-Type text/plain;
+                add_header Content-Length 0;
+                return 204;
+            }
+
             try_files $uri $uri/ /index.php?$query_string;
         }
 
         location ~ \.php$ {
+            # Handle OPTIONS in PHP locations too
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin "*" always;
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+                add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With, X-CSRF-Token" always;
+                add_header Access-Control-Max-Age 3600 always;
+                add_header Content-Type text/plain;
+                add_header Content-Length 0;
+                return 204;
+            }
+
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
