--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -24,12 +24,6 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
 
-    # Map for CORS - cleaner than if statements
-    map $request_method $cors_method {
-        OPTIONS 1;
-        default 0;
-    }
-
     server {
         # Render injects $PORT at runtime; replaced by envsubst in entrypoint.sh
         listen ${PORT};
@@ -38,16 +32,10 @@ http {
         root /var/www/html/public;
         index index.php;
 
-        # Security headers
+        # Security headers (not CORS - Laravel handles that)
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
-
-        # CORS headers for all responses
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With, X-CSRF-Token" always;
-        add_header Access-Control-Max-Age 3600 always;
 
         # Health-check endpoint (no PHP needed)
         location = /ping {
@@ -57,32 +45,10 @@ http {
         }
 
         location / {
-            # Handle OPTIONS preflight
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "*" always;
-                add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-                add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With, X-CSRF-Token" always;
-                add_header Access-Control-Max-Age 3600 always;
-                add_header Content-Type text/plain;
-                add_header Content-Length 0;
-                return 204;
-            }
-
             try_files $uri $uri/ /index.php?$query_string;
         }
 
         location ~ \.php$ {
-            # Handle OPTIONS in PHP locations too
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "*" always;
-                add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-                add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With, X-CSRF-Token" always;
-                add_header Access-Control-Max-Age 3600 always;
-                add_header Content-Type text/plain;
-                add_header Content-Length 0;
-                return 204;
-            }
-
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
