fix: remove CustomCors middleware, handle CORS purely at nginx level
nginx add_header with 'always' flag is more reliable.
Removed broken PHP middleware that was causing container crashes.

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -32,10 +32,16 @@ http {
         root /var/www/html/public;
         index index.php;
 
-        # Security headers (not CORS - Laravel handles that)
+        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
+        
+        # CORS headers - these work for all response types
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, X-Requested-With' always;
+        add_header 'Access-Control-Max-Age' '3600' always;
 
         # Health-check endpoint (no PHP needed)
         location = /ping {
