fix: remove single quotes from add_header directives causing nginx crash
Single quotes in add_header names were invalid syntax.
Also added CORS headers to /ping location (location blocks
override server-level add_header in nginx).

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -37,17 +37,18 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         
-        # CORS headers - these work for all response types
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, X-Requested-With' always;
-        add_header 'Access-Control-Max-Age' '3600' always;
+        # CORS headers - wildcard for all origins
+        add_header Access-Control-Allow-Origin "*" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With" always;
+        add_header Access-Control-Max-Age "3600" always;
 
         # Health-check endpoint (no PHP needed)
         location = /ping {
             access_log off;
-            return 200 "OK\n";
             add_header Content-Type text/plain;
+            add_header Access-Control-Allow-Origin "*" always;
+            return 200 "OK\n";
         }
 
         location / {
