fix: replace envsubst with sed for PORT injection
envsubst was potentially corrupting nginx variables.
Using simple sed replacement is more reliable and explicit.

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -25,8 +25,8 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
 
     server {
-        # Render injects $PORT at runtime; replaced by envsubst in entrypoint.sh
-        listen ${PORT};
+        # Railway injects PORT at runtime; replaced by sed in entrypoint.sh
+        listen 8080;
         server_name _;
 
         root /var/www/html/public;
