fix: update CORS configuration for improved handling
Modified max_age to 3600 seconds and enabled supports_credentials in Laravel's CORS config. Updated nginx configuration to delegate CORS handling to Laravel, removing previous wildcard settings for Access-Control-Allow-Origin.

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -36,12 +36,9 @@ http {
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
-        
-        # CORS headers - wildcard for all origins
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With" always;
-        add_header Access-Control-Max-Age "3600" always;
+
+        # CORS is handled by Laravel (config/cors.php) so credentialed requests
+        # get the correct Access-Control-Allow-Origin (exact origin, not *).
 
         # Health-check endpoint (no PHP needed)
         location = /ping {
