fix: enhance CORS handling in nginx configuration
Added a map for allowed origins to improve CORS preflight handling directly in nginx. This change allows specific origins to receive Access-Control-Allow-Origin headers, replacing the previous reliance on Laravel for CORS management. Updated OPTIONS handling to ensure correct headers are returned for preflight requests.

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -24,6 +24,18 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
 
+    # Allowed origins for CORS (preflight) – only these get Access-Control-Allow-Origin
+    map $http_origin $cors_origin {
+        default "";
+        "https://memo-spark-two.vercel.app" $http_origin;
+        "~^https://memo-spark(-[a-z0-9-]+)?\.vercel\.app$" $http_origin;
+        "http://localhost:5173" $http_origin;
+        "http://localhost:3000" $http_origin;
+        "http://localhost:8080" $http_origin;
+        "http://127.0.0.1:5173" $http_origin;
+        "http://127.0.0.1:3000" $http_origin;
+    }
+
     server {
         # Railway injects PORT at runtime; replaced by sed in entrypoint.sh
         listen 8080;
@@ -37,9 +49,6 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
 
-        # CORS is handled by Laravel (config/cors.php) so credentialed requests
-        # get the correct Access-Control-Allow-Origin (exact origin, not *).
-
         # Health-check endpoint (no PHP needed)
         location = /ping {
             access_log off;
@@ -48,7 +57,18 @@ http {
             return 200 "OK\n";
         }
 
+        # Handle CORS preflight (OPTIONS) in nginx so response always has correct headers
         location / {
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Allow-Origin $cors_origin;
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS";
+                add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, X-Requested-With";
+                add_header Access-Control-Allow-Credentials "true";
+                add_header Access-Control-Max-Age 3600;
+                add_header Content-Length 0;
+                add_header Content-Type "text/plain charset=UTF-8";
+                return 204;
+            }
             try_files $uri $uri/ /index.php?$query_string;
         }
 
