--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -24,19 +24,27 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
 
+    # Map allowed origins for CORS preflight
+    map $http_origin $cors_header {
+        default "";
+        "https://memo-spark-two.vercel.app" "https://memo-spark-two.vercel.app";
+        "~^https://memo-spark.*\.vercel\.app$" $http_origin;
+        "http://localhost:5173" "http://localhost:5173";
+        "http://localhost:3000" "http://localhost:3000";
+        "http://localhost:8080" "http://localhost:8080";
+        "http://127.0.0.1:5173" "http://127.0.0.1:5173";
+        "http://127.0.0.1:3000" "http://127.0.0.1:3000";
+    }
+
     server {
+        # Railway injects PORT at runtime; replaced by sed in entrypoint.sh
         listen 8080;
         server_name _;
 
         root /var/www/html/public;
         index index.php;
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-
-        # Health-check endpoint
+        # Health-check endpoint (no PHP needed)
         location = /ping {
             access_log off;
             add_header Content-Type text/plain;
@@ -44,12 +52,34 @@ http {
             return 200 "OK\n";
         }
 
-        # Let Laravel handle EVERYTHING, including OPTIONS requests
+        # Handle OPTIONS preflight for /api/* paths directly in nginx
+        location ~* ^/api/ {
+            # Handle CORS preflight
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_header always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, X-Requested-With, Origin' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Max-Age' 3600 always;
+                add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+                add_header 'Content-Length' 0 always;
+                return 204;
+            }
+
+            # Non-OPTIONS requests: pass to PHP
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        # All other requests
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
         location ~ \.php$ {
+            # Add CORS headers to PHP responses for allowed origins
+            add_header 'Access-Control-Allow-Origin' $cors_header always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
